city temperature is dynamically add

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <header>
             <section>
                 <div class="text-center pt-44">
-                    <h1 class="text-3xl font-bold text-emerald-400">Dhaka</h1>
-                    <h2 class="text-xl font-semibold text-sky-300 ">45.20</h2>
-                    <p class="text-fuchsia-400">Cloudy</p>
+                    <h1 id="city-name" class="text-3xl font-bold text-emerald-400">Dhaka</h1>
+                    <h2 id="temperature" class="text-xl font-semibold text-sky-300 "></h2>
+                    <p id="weather" class="text-fuchsia-400 font-semibold"></p>
                 </div>
             </section>
         </header>
@@ -22,8 +22,8 @@
         <main> 
             <section>
                 <div class="text-center pt-8">
-                    <input type="text" placeholder="Search.." class="input input-bordered input-sm w-full max-w-xs" />
-                    <button class="btn btn-sm btn-outline btn-info">Search</button>
+                    <input id="search-field" type="text" placeholder="Search" class="input input-bordered input-sm w-full max-w-xs" />
+                    <button id="search-btn" class="btn btn-sm btn-outline btn-info">Search</button>
                 </div>
             </section>
         </main>
